--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 	<h1>Tic Tac Toe</h1>
 
 	<div id='board'>
-		<div>1</div>
-		<div>2</div>
-		<div>3</div>
-		<div>4</div>
-		<div>5</div>
-		<div>6</div>
-		<div>7</div>
-		<div>8</div>
-		<div>9</div>
+
+		<div id="1"></div>
+		<div id="2"></div>
+		<div id="3"></div>
+		<div id="4"></div>
+		<div id="5"></div>
+		<div id="6"></div>
+		<div id="7"></div>
+		<div id="8"></div>
+		<div id="9"></div>
+
 	</div>
 
 <button name="reset" id="reset">Reset Board</button>
