--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 	<h1>Tic Tac Toe</h1>
+	<div id="scoreboard">
+		<h3>Scoreboard</h3>
+		<p>Player X: <span id="player1">0</span> </p>
+		<p>Player O: <span id="player2">0</span> </p>
+	</div>
 
 	<div id='board'>
 
