bug fix for player names

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<h1>Tic Tac Toe</h1>
 	<div id="scoreboard">
 		<h3>Scoreboard</h3>
-		<p>Player X: <span id="player1">0</span> </p>
-		<p>Player O: <span id="player2">0</span> </p>
+		<p>Player O: <span id="playerO">0</span> </p>
+		<p>Player X: <span id="playerX">0</span> </p>
 	</div>
 
 	<div id='board'>
