--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 <button name="reset" id="reset">Reset Board</button>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
